
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 APR 12a
  * in cycle/res/_generic/res.c
    - in add_dKstar_dG_residual(), add_dDstarU_residual(), add_Ystar_dH_residual(), got rid
      of arguments fact and fact_trapezoidal and rather made residual addition function of 
      gl->cycle.restime.weightm1_trapezoidal_default
    - in update_residual(), got rid of fact and fact_trapezoidal 
  * in cycle/resconv/_*/resconv.c
    - in add_dFstar_residual(), got rid of arguments fact and fact_trapezoidal and rather made 
      residual addition function of gl->cycle.restime.weightm1_trapezoidal_convection
  * in cycle/ressource/_*/ressource.c
    - in add_Sstar_residual() got rid of arguments fact and fact_trapezoidal and rather made 
      residual addition function of gl->cycle.restime.weightm1_trapezoidal_default
  * in cycle/restime/_*/restime.c
    - in add_Z_dUstar_residual(), got rid of arguments fact and fact_trapezoidal 
  * in cycle/restime/_Trapezoidal/restime.c
    - in write_disc_restime_template(), added Trapezoidal() module
    - in read_disc_restime_actions(), added read of weightm1 and weightp0
    - in add_Z_dUstar_residual(), improved residual contributions and made them function 
      of gl->cycle.restime.weightm1_trapezoidal_default
  * in cycle/share/ts_share.c
    - in add_Z_dUstardt_dUstar_to_TDMA(), improved linearization and made it function of
      gl->cycle.restime.weightm1_trapezoidal_default
    - in find_TDMA_jacobians_conservative(), and add_TDMA_jacobians_non_conservative()
      and add_TDMA_jacobian_diagonally_dominant() made fact function of 
      gl->cycle.restime.weightm1_trapezoidal_default
      and gl->cycle.restime.weightm1_trapezoidal_convection
  * in src/init.c