@@ -194,8 +194,8 @@ Disc(
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_DIFFUSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.999;
-    INTERPOL=INTERPOL_TVD2_VANLEER;
+    AOWENO_gammahi=0.95;
+    INTERPOL=INTERPOL_AOWENO5;
     FACEINTEG=FACEINTEG_CENTRAL1;
     EIGENVALCOND=EIGENVALCOND_PARENT;
     POSFILTER=POSFILTER_PARENT;
@@ -216,6 +216,10 @@ Disc(
     xi[2]=0.5; {momentum fluxes}
     xi[3]=0.5; {total energy flux}
     xi[4]=0.5;
+  );
+  Trapezoidal(
+    weightm1_convection=0.5;
+    weightm1_default=0.0;
   );
 );
 
@@ -241,7 +245,7 @@ Cycle(
       if (time==0, 
         CFL=0.01;
       ,{else}
-        CFL=0.9;
+        CFL=2.5;
       );
       Init(NavierStokesPerfect(
         i=is;
@@ -284,7 +288,7 @@ Cycle(
       ););
 
     );
-    if (iter>20,CFL=max(CFL*0.95,0.05););
+    if (iter>20,CFL=max(CFL*0.95,0.45););
     UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2,dt);
     if (CONVERGENCEHISTORY,
       printf("%6ld %6ld  %E \n",
